# Shadow

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  compile.sh  format.sh  meson.build  pytest.sh  todo  todo.txt
src/: CMakeLists.txt  ast_printer.c  main.c  meson.build  token_printer.c
src/exec/: and_or_node.c  assignment_node.c  cd.c  command_node.c  echo.c  exec.c  exec.h  if_node.c  list_node.c  pipe_node.c  redirec_nodes.c  redirections.c  until_node.c  variable_exec.c  variable_exec2.c  while_node.c
src/interactive/: interactive.c  interactive.h
src/io/: io.c  io.h  meson.build
src/lexer/: assignment_word_lexer.c  double_quote_lexer.c  general_lexer.c  io_number_lexer.c  keyword_lexer.c  lexer.c  lexer.h  lexer2.c  lexer3.c  lexer4.c  meson.build  sing_quote_lexer.c  tokens.c  tokens.h  word_lexer.c
src/parser/: and_or_parser.c  if_else_parser.c  parse_command.c  parser.c  parser.h  pipe_parser.c  redirection_parser.c  until_parser.c  while_parser.c
src/printer/: printer.c  printer.h
src/script/: file_input.c  file_input.h
src/utils/: utils.c  utils.h
src/variables/: variables.c  variables.h  variables2.c
test/: main.c
test/functional/: run_test.py  run_test_var.py  test.sh  test_boolean.py  test_builtin_week_3.py  test_echo.py  test_if.py  test_if.sh  test_if_fail.sh  test_loop.py  test_pipe.py  test_redir.py  test_sample.py  test_script.py  test_simple_command.py  test_variable_special.py  test_variable_special_with_file.py  test_week_3.py  test_week_4.py
test/functional/variable/: var.sh  var_number.sh  var_param_nb.sh  var_random.sh
test/io_test/: io_test.c
test/lexer_test/: keyword_lexer_test.c  lexer_test.c  word_lexer_test.c
